--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcc 'PG'
 - !lcsh 'Floods -- Fiction'
 - !lcc 'PZ'
+- GITenberg
 title: Vlci proti Mustangům
 url: http://www.gutenberg.org/ebooks/27974
